# cmake-companion

./: .eslintrc.json  .gitignore  .nycrc.json  LICENSE  README.md  convert-icon.py  language-configuration.json  package-lock.json  package.json  tsconfig.json
.github/workflows/: release.yml
example/: CMakeLists.txt  README.txt  SampleApp.vcxproj  advanced-features.cmake  build-script.cmake  config.txt  custom-module.cmake  environment-nested-variables.cmake  generator-expressions.cmake  test-paths.cmake  test-plain-paths.cmake
example/include/: config.h  config.hpp  utils.h
example/src/: config.c  example.cc  main.cpp  utils.cpp
src/: extension.ts
src/parsers/: cmakeGenerator.ts  cmakeListsParser.ts  cmakeVariableParser.ts  index.ts  vcxprojParser.ts  xcodeprojParser.ts
src/providers/: completionProvider.ts  definitionProvider.ts  diagnosticProvider.ts  documentLinkProvider.ts  foldingProvider.ts  formattingProvider.ts  hoverProvider.ts  index.ts  semanticTokensProvider.ts
src/services/: coreVariableResolver.ts  fileWatcher.ts  index.ts  variableResolver.ts
src/test/: cmakeBuiltins.test.ts  cmakeGenerator.test.ts  cmakeListsParser.test.ts  cmakeVariableParser.test.ts  completionProvider.test.ts  coreVariableResolver.test.ts  definitionProvider.test.ts  diagnosticProvider.test.ts  foldingProvider.test.ts  formatting.test.ts  hoverProvider.test.ts  semanticTokensProvider.test.ts  variableResolver.test.ts  vcxprojParser.test.ts  xcodeprojParser.test.ts
src/utils/: arrayUtils.ts  cmakeBuiltins.ts  completionUtils.ts  definitionUtils.ts  diagnosticUtils.ts  foldingUtils.ts  formattingUtils.ts  index.ts
syntaxes/: cmake.tmLanguage.json
